<resources>
    <string name="app_name">Veza</string>
    <string name="pass_description">Use 8 or more words with a mix of letters, numbers, and symbols</string>
    <string name="title_activity_parent_windows">parent_windows</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="title_activity_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_newzee">New Zee</string>
    <string name="_30_00">30:00</string>
    <string name="finished">Finished</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_you_mail_id">Enter Your Email ID</string>
    <string name="password">password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_in_with_google">Login With Google</string>
    <string name="or">or</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_your_name">Write Your Name</string>
    <string name="your_question">Your Question</string>
    <string name="doubt">doubt</string>
    <string name="write_your_answer_here">Write your answer here</string>
    <string name="post">POST</string>
    <string name="answer">Answer</string>
    <string name="enter_time">ENTER TIME</string>
    <string name="Finished">FINISHED</string>
    <string name="asd">asd</string>
</resources>